2016-02-16  Andy Buckley  <andy.buckley@cern.ch>

	* Fix to rivet-cmphistos to avoid overwriting RatioPlotYLabel if
	already set via e.g. the PLOT pseudo-file. Thanks to Johann Felix
	v. Soden-Fraunhofen.

2016-02-15  Andy Buckley  <andy.buckley@cern.ch>

	* Add Analysis::bookCounter and some machinery in rivet-cmphistos
	to avoid getting tripped up by unplottable (for now) data types.

	* Add --font and --format options to rivet-mkhtml and make-plots,
	to replace the individual flags used for that purpose. Not fully
	cleaned up, but a necessary step.

	* Add new plot styling options to rivet-cmphistos and
	rivet-mkhtml. Thanks to Gavin Hesketh.

	* Modify rivet-cmphistos and rivet-mkhtml to apply plot hiding if
	*any* path component is hidden by an underscore prefix, as
	implemented in AOPath, plus other tidying using new AOPath
	methods.

	* Add pyext/rivet/aopaths.py, containing AOPath object for central
	& standard decoding of Rivet-standard analysis object path
	structures.

2016-02-12  Andy Buckley  <andy.buckley@cern.ch>

	* Update ParticleIdUtils.hh (i.e. PID:: functions) to use the
	functions from the latest version of MCUtils' PIDUtils.h.

2016-01-15  Andy Buckley  <andy.buckley@cern.ch>

	* Change rivet-cmphistos path matching logic from match to search
	(user can add explicit ^ marker if they want match semantics).

2015-12-20  Andy Buckley  <andy.buckley@cern.ch>

	* Improve linspace (and hence also logspace) precision errors by
	using multiplication rather than repeated addition to build edge
	list (thanks to Holger Schulz for the suggestion).

2015-12-15  Andy Buckley  <andy.buckley@cern.ch>

	* Add cmphistos and make-plots machinery for handling 'suffix'
	variations on plot paths, currently just by plotting every line,
	with the variations in a 70% faded tint.

	* Add Beam::pv() method for finding the beam interaction primary
	vertex 4-position.

	* Add a new Particle::setMomentum(E,x,y,z) method, and an origin