@@ -1,7 +1,8 @@
 # BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d..-x..-y..
-LogY=0
+LogY=1
 LegendYPos=0.90
-LegendXPos=0.75
+LegendXPos=0.90
+LegendAlign=r
 RatioPlotYMax=1.5
 RatioPlotYMin=0.5
 XTwosidedTicks=1
@@ -10,7 +11,7 @@ ErrorBars=1
 # END PLOT
 
 # BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d0[7-8]-x01-y..
-LogY=1
+LogX=1
 RatioPlotYMax=2.0
 RatioPlotYMin=0.0
 XLabel=$E^\gamma_\text{T}$ [GeV]
@@ -27,23 +28,23 @@ XLabel=$m^{W\gamma}_\text{T}$ [GeV]
 YLabel=$1/\sigma_{W\gamma} \times \text{d}\sigma_{W\gamma} / \text{d} m^{W\gamma}_\text{T}$
 # END PLOT
 
-# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d07-x01-y03
+# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d07-x01-y01
 Title=$N_\text{jet} \geq 0$, muon channel, dressed level
 # END PLOT
 
-# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d08-x01-y03
+# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d08-x01-y01
 Title=$N_\text{jet} = 0$, muon channel, dressed level
 # END PLOT
 
-# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d15-x01-y03
+# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d15-x01-y01
 Title=$E^\gamma_\text{T} \geq 15$ GeV, muon channel, dressed level
 # END PLOT
 
-# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d16-x01-y03
+# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d16-x01-y01
 Title=$E^\gamma_\text{T} \geq 60$ GeV, muon channel, dressed level
 # END PLOT
 
-# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d19-x01-y03
+# BEGIN PLOT /ATLAS_2013_I1217863_W_MU/d19-x01-y01
 Title=$E^\gamma_\text{T} > 40$ GeV, muon channel, dressed level
 # END PLOT
 
