@@ -133,14 +133,9 @@ namespace Rivet {
     /// Normalise histograms etc., after the run
     void finalize() {
 
-      /// Print summary info
-      const double xs_pb(crossSection() / picobarn);
-      const double sumw(sumOfWeights());
-      MSG_INFO("Cross-Section/pb: " << xs_pb      );
-      MSG_INFO("Sum of weights  : " << sumw       );
-      MSG_INFO("nEvents         : " << numEvents());
-
-      const double sf(xs_pb / sumw);
+      const double xs_fb = crossSection()/femtobarn;
+      const double sumw = sumOfWeights();
+      const double sf = xs_fb / sumw;
 
       scale(_hist_EgammaT_excl, sf);
       scale(_hist_EgammaT_incl, sf);
@@ -182,6 +177,7 @@ namespace Rivet {
     }
   };
 
+
   class ATLAS_2013_I1217863_Z_MU : public ATLAS_2013_I1217863_Z {
   public:
     ATLAS_2013_I1217863_Z_MU()
@@ -192,8 +188,8 @@ namespace Rivet {
   };
 
 
-  // The hook for the plugin system
   DECLARE_RIVET_PLUGIN(ATLAS_2013_I1217863_Z);
   DECLARE_RIVET_PLUGIN(ATLAS_2013_I1217863_Z_EL);
   DECLARE_RIVET_PLUGIN(ATLAS_2013_I1217863_Z_MU);
+
 }
